--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -11,7 +11,7 @@
     <%= form_for(@recipe) do |f| %>
       <% if @recipe.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(@recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
+          <h2><%= pluralize(@recipe.errors.count, 'error') %> prohibited this recipe from being saved:</h2>
 
           <ul>
           <% @recipe.errors.full_messages.each do |msg| %>
