--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -17,6 +17,6 @@
   </div>
 
   <div class="actions form-group col-md-12">
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit class: "button-primary" %>
   </div>
 <% end %>
