--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,26 +1,27 @@
-<p id="notice"><%= notice %></p>
+<section id="ingredients">
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Ingredients</h1>
+  <h1 class="header">Ingredients</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="4"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @ingredients.each do |ingredient| %>
+  <table class="u-full-width">
+    <thead>
       <tr>
-        <td><%= ingredient.name %></td>
-        <td><%= link_to 'Show', ingredient %></td>
-        <td><%= link_to 'Edit', edit_ingredient_path(ingredient) %></td>
-        <td><%= link_to 'Destroy', ingredient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @ingredients.each do |ingredient| %>
+        <tr>
+          <td><%= ingredient.name %></td>
+          <td><%= link_to 'Show', ingredient %></td>
+          <td><%= link_to 'Edit', edit_ingredient_path(ingredient) %></td>
+          <td><%= link_to 'Destroy', ingredient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Ingredient', new_ingredient_path %>
+  <%= link_to 'New Ingredient', new_ingredient_path, class: 'button' %>
+</section>
