--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,9 +1,14 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h1 class="text-center">Recipes</h1>
-  </div>
+<section id="recipes">
+  <h1 class="header">Recipes</h1>
 
-  <table class="table">
+  <table class="u-full-width">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
     <% @recipes.each do |recipe| %>
       <tr>
         <td><%= recipe.title %></td>
@@ -13,6 +18,6 @@
       </tr>
     <% end %>
   </table>
-</div>
 
-<%= link_to 'New Recipe', new_recipe_path, class: 'btn btn-default' %>
+  <%= link_to 'New Recipe', new_recipe_path, class: 'button' %>
+</section>
