--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,55 +4,50 @@
   </div>
 <% end %>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h1>
-      <%= @recipe.title %>
-    </h1>
-    <p class="blog-post-meta">
-      <%= time_tag(@recipe.created_at) %>
-    </p>
-  </div>
+<div class="row">
+  <h1><%= @recipe.title %></h1>
 
-  <div class="row">
-    <dl class="dl-horizontal">
-      <dt>Concoction Type</dt>
-      <dd>
-        <p class="col-md-6 text-left">
-          <%= @recipe.concoction_type %>
-        </p>
-      </dd>
+  <p class="blog-post-meta">
+    <%= time_tag(@recipe.created_at) %>
+  </p>
 
-      <dt>Description</dt>
-      <dd>
-        <%= simple_format(@recipe.description, class: 'col-md-6 text-left') %>
-      </dd>
+  <dl class="dl-horizontal six columns">
+    <dt><strong>Concoction Type</strong></dt>
+    <dd>
+      <p>
+        <%= @recipe.concoction_type.name %>
+      </p>
+    </dd>
 
-      <dt>Yields</dt>
-      <dd>
-        <p class="col-md-6 text-left">
-          <%= @recipe.yields %>
-        </p>
-      </dd>
+    <dt><strong>Description</strong></dt>
+    <dd>
+      <%= simple_format(@recipe.description) %>
+    </dd>
 
-      <dt>Directions</dt>
-      <dd>
-        <%= simple_format(@recipe.directions, class: 'col-md-6 text-left') %>
-      </dd>
+    <dt><strong>Yields</strong></dt>
+    <dd>
+      <p>
+        <%= @recipe.yields %>
+      </p>
+    </dd>
 
-      <dt>Last Updated</dt>
-      <dd>
-        <p class="col-md-6 text-left">
-          <%= time_ago_in_words(@recipe.updated_at) %></time>
-        </p>
-      </dd>
+    <dt>Directions</dt>
+    <dd>
+      <%= simple_format(@recipe.directions) %>
+    </dd>
+
+    <dt>Last Updated</dt>
+    <dd>
+      <p>
+        <%= time_ago_in_words(@recipe.updated_at) %></time>
+      </p>
+    </dd>
     <dl>
-  </div>
+</div>
 
-  <div class="row">
-    <p class="col-md-6 text-left">
-      <%= link_to 'Edit Recipe', edit_recipe_path(@recipe), class: 'btn btn-info' %>
-      <%= link_to 'Back', recipes_path, class: 'btn btn-default' %>
-    </p>
-  </div>
+<div class="row">
+  <p class="six columns">
+    <%= link_to 'Edit Recipe', edit_recipe_path(@recipe), class: 'btn btn-info' %>
+    <%= link_to 'Back', recipes_path, class: 'btn btn-default' %>
+  </p>
 </div>
