--- a/app/views/concoction_types/index.html.erb
+++ b/app/views/concoction_types/index.html.erb
@@ -1,27 +1,29 @@
-<p id="notice"><%= notice %></p>
+<section id="concoction-types">
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Concoction Types</h1>
+  <h1>Concoction Types</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @concoction_types.each do |concoction_type| %>
+  <table class="u-full-width">
+    <thead>
       <tr>
-        <td><%= concoction_type.name %></td>
-        <td><%= link_to 'Show', concoction_type %></td>
-        <td><%= link_to 'Edit', edit_concoction_type_path(concoction_type) %></td>
-        <td><%= link_to 'Destroy', concoction_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @concoction_types.each do |concoction_type| %>
+        <tr>
+          <td><%= concoction_type.name %></td>
+          <td><%= link_to 'Show', concoction_type %></td>
+          <td><%= link_to 'Edit', edit_concoction_type_path(concoction_type) %></td>
+          <td><%= link_to 'Destroy', concoction_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Concoction type', new_concoction_type_path %>
+  <br>
+
+  <%= link_to 'New Concoction type', new_concoction_type_path, class: 'button' %>
+</section>
