--- a/app/views/concoctions/index.html.erb
+++ b/app/views/concoctions/index.html.erb
@@ -1,5 +1,7 @@
-<section class="header">
-  <h1>Concoctions</h1>
+<section id="concoctions">
+  <p id="notice"><%= notice %></p>
+
+  <h1 class="header">Concoctions</h1>
 
   <table class="u-full-width">
     <thead>
