Initial react.js work

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,84 +4,7 @@
   </div>
 <% end %>
 
-<div class="row">
-  <h1><%= @recipe.title %></h1>
-
-  <p class="blog-post-meta">
-    <%= time_tag(@recipe.created_at) %>
-  </p>
-
-  <dl class="dl-horizontal six columns">
-    <dt><strong>Concoction Type</strong></dt>
-    <dd>
-      <p>
-        <%= @recipe.concoction_type.try(:name) %>
-      </p>
-    </dd>
-
-    <dt><strong>Ingredients</strong></dt>
-    <dd>
-      <p><%= @recipe.ingredients.count %> ingredients.</p>
-      <ol>
-
-      <% @recipe.ingredients.each do |ingredient| %>
-        <li><p>
-            <%= ingredient_line_item(ingredient) %>
-        </li></p>
-      <% end %>
-      </ol>
-    </dd>
-    <dt><strong>Description</strong></dt>
-    <dd>
-      <%= simple_format(@recipe.description) %>
-    </dd>
-
-    <dt><strong>Yields</strong></dt>
-    <dd>
-      <p>
-        <%= @recipe.yields %> <%= @recipe.yields_unit %>
-      </p>
-    </dd>
-
-    <dt><strong>Directions</strong></dt>
-    <dd>
-      <%= simple_format(@recipe.directions) %>
-    </dd>
-
-    <dt><strong>Some Related Concoctions</strong></dt>
-    <dd>
-      <p><%= @recipe.concoctions.count %> concoctions.</p>
-      <ol>
-
-      <% @recipe.concoctions.each do |concoction| %>
-        <li><p>
-          <%= link_to concoction.name, concoction_path(concoction) %>
-        </li></p>
-      <% end %>
-      </ol>
-    </dd>
-
-    <dt><strong>Influencing Recipes</strong></dt>
-    <dd>
-      <p><%= @recipe.influencing_recipes.count %> influencing recipes.</p>
-      <ol>
-
-      <% @recipe.influencing_recipes.each do |influencing_recipe| %>
-        <li><p>
-          <%= link_to influencing_recipe.title, recipe_path(influencing_recipe) %>
-        </li></p>
-      <% end %>
-      </ol>
-    </dd>
-
-    <dt>Last Updated</dt>
-    <dd>
-      <p>
-        <%= time_ago_in_words(@recipe.updated_at) %></time>
-      </p>
-    </dd>
-    <dl>
-</div>
+<%= react_component('Recipe', ActiveModel::SerializableResource.new(@recipe).serializable_hash[:data]) %>
 
 <div class="row">
   <p class="six columns">
@@ -89,3 +12,4 @@
     <%= link_to 'Back', recipes_path, class: 'btn btn-default' %>
   </p>
 </div>
+
