Display concoction_types

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,5 +1,6 @@
 <h2 id="title">Welcome to Ember</h2>
 
 {{#link-to "ingredients"}}Ingredients{{/link-to}}
+{{#link-to "concoction-types"}}Concoction Types{{/link-to}}
 
 {{outlet}}
