--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -2,5 +2,6 @@
 
 {{#link-to "ingredients"}}Ingredients{{/link-to}}
 {{#link-to "concoction-types"}}Concoction Types{{/link-to}}
+{{#link-to "recipes"}}Recipes{{/link-to}}
 
 {{outlet}}
