Mass commit. Stupid GH desktop app..

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <h2 id="title">Welcome to Ember</h2>
 
-{{#link-to "ingredients"}}Ingredients{{/link-to}}
-{{#link-to "concoction-types"}}Concoction Types{{/link-to}}
-{{#link-to "recipes"}}Recipes{{/link-to}}
+{{#link-to "list-ingredients"}}Ingredients{{/link-to}}
+{{#link-to "list-concoction-types"}}Concoction Types{{/link-to}}
+{{#link-to "list-recipes"}}Recipes{{/link-to}}
 
 {{outlet}}
